--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="lib/server.jar"/>
 	<classpathentry kind="lib" path="lib/args4j-2.0.21.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/DistributedAlgorithmServer"/>
+	<classpathentry kind="lib" path="lib/bridj-0.7-20130703.103049-42.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="lib/json_simple-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
